[tool.poetry]
name = "fantastic-palm-tree"
version = "0.1.0"
description = ""
authors = ["Kasim <muhammad.k.ali.93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
kagglehub = "^0.3.4"
plotly = "^5.24.1"
dash = "^2.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
